# mandelbrot

./: Cargo.toml  Dockerfile
src/: main.rs  mandelbrot.rs  savepng.rs
src/mandelbrot/: v2.rs
