[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Alex Vitkov <alexvitkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# command line args parser
clap = "2.33.1"     
num = "0.2.1"     
png = "0.16.4"
crossbeam = "0.7.3"

[[bin]]
name="mandelbrot"
path="src/main.rs"
